--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <title>Atividade Devops</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    
+  </body>
+</html>
