--- a/index.html
+++ b/index.html
@@ -1,10 +1,85 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <title>Atividade Devops</title>
     <meta charset="utf-8">
   </head>
   <body>
-    
+   <h1>Exercicio 2</h1>
+    <ol>
+<ol start='1'><li>Titanic</li>
+<li>Meu Primeiro Amor</li>
+<li>Uma linda mulher</li>
+</ol><br>
+<ol start='10'><li>Exterminador do futuro</li>
+<li>De volta para o futuroI, II, III</li>
+<li>Indiana jones</li></ol><br>
+<ol start='20'><li>sexta feira 13</li>
+<li>a hora do pesadelo</li>
+</ol><br>
+
+   <h1>Exercicio 8</h1><br>
+
+  <table border="1">
+<tr>
+<th>Processador</th>
+<th>Velocidade de (MHz)</th>
+<th>Preço de lançamento</th>
+<th>Data de lançamento</th>
+<th>Preços em agosto/200 0*</th>
+<th>Qued a %</th>
+</tr>
+<tr>
+<td>AMD K-6</td>
+<td>200</td>
+<td>315</td>
+<td>Abril/97</td>
+<td>107</td>
+<td>66</td>
+</tr>
+<tr>
+<td>AMD K-6</td>
+<td>233</td>
+<td>437</td>
+<td>Maio/97</td>
+<td>284</td>
+<td>35</td>
+</tr>
+<tr>
+<td>Cyrix 6x86</td>
+<td>200</td>
+<td>240</td>
+<td>Maio/97</td>
+<td>188</td>
+<td>22</td>
+</tr>
+<tr>
+<td>Cyrix 6x86</td>
+<td>233</td>
+<td>320</td>
+<td>Maio/97</td>
+<td>290</td>
+<td>9</td>
+</tr>
+<tr>
+<td>Intel Pentium II</td>
+<td>233</td>
+<td>636</td>
+<td>Maio/97</td>
+<td>530</td>
+<td>17</td>
+</tr>
+<tr>
+<td>Intel Pentium II</td>
+<td>266</td>
+<td>775</td>
+<td>Maio/97</td>
+<td>699</td>
+<td>10</td>
+</tr>
+
+
+</table>
+
   </body>
 </html>
